--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 			<section id="cta" class="wrapper">
 				<div class="inner">
 					<h2>Buchen Sie Ihr Ferienhaus</h2></a>
-					<a href="#" class="button primary">Jetzt buchen!</a>
+					<a href="holiday_homes.html" class="button primary">Jetzt buchen!</a>
 				</div>
 			</section>
 
